# navicon

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: .gitignore  100_system_context.puml  200_containers.puml  300_components.puml
src/: conn.rs  library.rs  main.rs  subsonic.rs  ui.rs
src/ui/: event.rs  mod.rs  model.rs
